fix: replace deprecated key extend-ignore in ruff
extend-ignore has been deprecated in favor of ignore, see https://beta.ruff.rs/docs/settings/#extend-ignore

--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -110,7 +110,8 @@ extend-exclude = [
   "template",
 ]
 [%- endif %]
-extend-ignore = [
+fix = true
+ignore = [
   "D203",
   "D204",
   "D213",
@@ -123,7 +124,6 @@ extend-ignore = [
   "D409",
   "D413",
 ]
-fix = true
 select = ["ALL"]
 src = ["src"]
 
