--- a/template/[% if repo_host_type == 'github.com' %].github[% endif %]/workflows/ci.yml.jinja
+++ b/template/[% if repo_host_type == 'github.com' %].github[% endif %]/workflows/ci.yml.jinja
@@ -1,74 +1,27 @@
 [% from pathjoin("includes", "version_compare.jinja") import version_between -%]
+name: ci
+
+on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+  push:
+    branches:
+      - main
+
 concurrency:
   cancel-in-progress: true
   group: {{ '${{ github.workflow }}-${{ github.ref }}' }}
+
 jobs:
-  ci:
-    if: {{ '${{ !cancelled() && ! failure() }}' }}
-    needs: dependabot
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Set up Python {{ '${{ matrix.python-version }}' }}
-        uses: actions/setup-python@v4
-        with:
-          cache: pip
-          python-version: {{ '${{ matrix.python-version }}' }}
-      - run: env | sort
-      - run: make dev
-      - run: make lint test docs build
-    strategy:
-      matrix:
-        python-version:
-[%- if version_between("3.8", min_py, max_py) %]
-          - '3.8'
-[%- endif %]
-[%- if version_between("3.9", min_py, max_py) %]
-          - '3.9'
-[%- endif %]
-[%- if version_between("3.10", min_py, max_py) %]
-          - '3.10'
-[%- endif %]
-[%- if version_between("3.11", min_py, max_py) %]
-          - '3.11'
-[%- endif %]
-[%- if project_name == "Serious Scaffold Python" %]
-  consistency:
-    if: {{ '${{ !cancelled() && ! failure() }}' }}
-    needs: dependabot
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Git
-        run: |
-          git config --global user.name github-actions
-          git config --global user.email github-actions@github.com
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          cache: pip
-          python-version: '{{ default_py }}'
-      - run: env | sort
-      - name: Install copier for template rendering using pipx
-        run: pipx install copier
-      - name: Generate the project with the default value
-        run: |
-          find . -maxdepth 1 | grep -vE "(\.|template|includes|\.git|copier\.yaml)$" | xargs -I {} rm -r {}
-          copier copy -d repo_host_type=gitlab.com -r HEAD -f . .
-          rm .copier-answers.yml
-          copier copy -r HEAD -f . .
-          rm .copier-answers.yml
-      - run: git diff
-      - run: git status --porcelain
-      - run: test -z "$(git status --porcelain)"
-[%- endif %]
+
   dependabot:
     if: {{ '${{ github.actor == \'dependabot[bot]\' }}' }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -121,12 +74,68 @@ jobs:
             git commit -a -m "build: Update constraints for dependabot."
             git push
           fi
-name: CI
-on:
-  pull_request:
-    types:
-      - opened
-      - synchronize
-  push:
-    branches:
-      - main
+
+  ci:
+    if: {{ '${{ !cancelled() && ! failure() }}' }}
+    needs: dependabot
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+[%- if version_between("3.8", min_py, max_py) %]
+          - '3.8'
+[%- endif %]
+[%- if version_between("3.9", min_py, max_py) %]
+          - '3.9'
+[%- endif %]
+[%- if version_between("3.10", min_py, max_py) %]
+          - '3.10'
+[%- endif %]
+[%- if version_between("3.11", min_py, max_py) %]
+          - '3.11'
+[%- endif %]
+
+[%- if project_name == "Serious Scaffold Python" %]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up Python {{ '${{ matrix.python-version }}' }}
+        uses: actions/setup-python@v4
+        with:
+          cache: pip
+          python-version: {{ '${{ matrix.python-version }}' }}
+      - run: env | sort
+      - run: make dev
+      - run: make lint test docs build
+
+  consistency:
+    if: {{ '${{ !cancelled() && ! failure() }}' }}
+    needs: dependabot
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Git
+        run: |
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          cache: pip
+          python-version: '{{ default_py }}'
+      - run: env | sort
+      - name: Install copier for template rendering using pipx
+        run: pipx install copier
+      - name: Generate the project with the default value
+        run: |
+          find . -maxdepth 1 | grep -vE "(\.|template|includes|\.git|copier\.yaml)$" | xargs -I {} rm -r {}
+          copier copy -d repo_host_type=gitlab.com -r HEAD -f . .
+          rm .copier-answers.yml
+          copier copy -r HEAD -f . .
+          rm .copier-answers.yml
+      - run: git diff
+      - run: git status --porcelain
+      - run: test -z "$(git status --porcelain)"
+[%- endif %]
