--- a/template/Makefile.jinja
+++ b/template/Makefile.jinja
@@ -76,11 +76,11 @@ constraints: deepclean
 
 # Check lint with black.
 black:
-	$(PIPRUN) python -m black --check .
+	$(PIPRUN) python -m black .
 
 # Check lint with isort.
 isort:
-	$(PIPRUN) python -m isort --check .
+	$(PIPRUN) python -m isort .
 
 # Check lint with mypy.
 mypy:
@@ -88,18 +88,18 @@ mypy:
 
 # Check lint with ruff.
 ruff:
-	$(PIPRUN) python -m ruff .
+	$(PIPRUN) python -m ruff --force-exclude --fix --show-fixes .
 
 # Check lint with toml-sort.
 toml-sort:
-	$(PIPRUN) toml-sort --check pyproject.toml
+	$(PIPRUN) toml-sort pyproject.toml
 
 # Check lint with all linters.
 lint: black isort mypy ruff toml-sort
 
 # Run pre-commit with autofix against all files.
 pre-commit:
-	pre-commit run --all-files
+	$(PIPRUN) python -m pre_commit run --all-files
 
 ########################################################################################
 # Test
