feat: add license option

--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -94,4 +94,4 @@ pipx install pre-commit
 
 ## 📜 License
 
-MIT, for more details, see the [LICENSE]({{ license_url() }}) file.
+{{ copyright_license }}, for more details, see the [LICENSE]({{ license_url() }}) file.
