--- a/includes/licenses/MIT License.jinja
+++ b/includes/licenses/MIT License.jinja
@@ -1,6 +1,6 @@
 MIT License
 
-Copyright (c) 2022 Xuan (Sean) Hu
+Copyright (c) {{ copyright_year }} {{ copyright_holder }}
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to deal
