--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -8,7 +8,7 @@ requires = ["setuptools", "setuptools-scm"]
 authors = [{email = "i@huxuan.org", name = "huxuan"}]
 classifiers = [
   "Development Status :: 4 - Beta",
-  "License :: OSI Approved :: MIT License",
+  "License :: OSI Approved :: {{ copyright_license }}",
   "Operating System :: OS Independent",
 [%- if version_between("3.10", min_py, max_py) %]
   "Programming Language :: Python :: 3.10",
