perf: add default_branch for repo configuration

--- a/template/[% if repo_host_type == 'github.com' %].github[% endif %]/workflows/ci.yml.jinja
+++ b/template/[% if repo_host_type == 'github.com' %].github[% endif %]/workflows/ci.yml.jinja
@@ -8,7 +8,7 @@ on:
       - synchronize
   push:
     branches:
-      - main
+      - {{ default_branch }}
 
 concurrency:
   cancel-in-progress: true
